--- a/daily.html
+++ b/daily.html
@@ -6,4 +6,13 @@ title: Daily Routine
 <frameset cols="50%,*">
 <frame src="https://www.investors.com/category/market-trend/the-big-picture/" scrolling="auto" name="The Big Picture">
 <frame src="https://www.investors.com/research/ibd-stock-of-the-day/" scrolling="auto" name="IBD Stock Of The Day">
+   <noframes>
+
+                <body>
+
+                        <p>对不起，您的浏览器不支持“框架”！</p>
+
+                </body>
+
+        </noframes>
 </frameset>
