--- a/daily.html
+++ b/daily.html
@@ -2,17 +2,5 @@
 layout: page
 title: Daily Routine
 ---
-
-<frameset cols="50%,*">
-<frame src="https://www.investors.com/category/market-trend/the-big-picture/" scrolling="auto" name="The Big Picture">
-<frame src="https://www.investors.com/research/ibd-stock-of-the-day/" scrolling="auto" name="IBD Stock Of The Day">
-   <noframes>
-
-                <body>
-
-                        <p>对不起，您的浏览器不支持“框架”！</p>
-
-                </body>
-
-        </noframes>
-</frameset>
+<iframe width="100%" height="500" src="https://www.investors.com/category/market-trend/the-big-picture/"></iframe>
+<iframe width="100%" height="500" src="https://www.investors.com/research/ibd-stock-of-the-day/"></iframe>
