--- a/daily.html
+++ b/daily.html
@@ -2,5 +2,8 @@
 layout: page
 title: Daily Routine
 ---
-<iframe width="100%" height="500" src="https://www.investors.com/category/market-trend/the-big-picture/"></iframe>
-<iframe width="100%" height="500" src="https://www.investors.com/research/ibd-stock-of-the-day/"></iframe>
+<script type="module" src="https://unpkg.com/x-frame-bypass"></script>
+
+
+<iframe is="x-frame-bypass" width="100%" height="500" src="https://www.investors.com/category/market-trend/the-big-picture/"></iframe>
+<iframe is="x-frame-bypass" width="100%" height="500" src="https://www.investors.com/research/ibd-stock-of-the-day/"></iframe>
