--- a/daily.html
+++ b/daily.html
@@ -7,3 +7,4 @@ title: Daily Routine
 
 <iframe width="100%" height="500" src="https://www.investors.com/category/market-trend/the-big-picture/"></iframe>
 
+<iframe width="100%" height="500" src="https://www.investors.com/market-trend/stock-market-today/stock-market-today-market-trends-best-stocks-buy-watch/"></iframe>
