--- a/daily.html
+++ b/daily.html
@@ -8,3 +8,6 @@ title: Daily Routine
 <iframe width="100%" height="500" src="https://www.investors.com/category/market-trend/the-big-picture/"></iframe>
 
 <iframe width="100%" height="500" src="https://www.investors.com/market-trend/stock-market-today/stock-market-today-market-trends-best-stocks-buy-watch/"></iframe>
+
+
+<rssapp-wall id="UvW69TSJxWhgav4w"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
