--- a/daily.html
+++ b/daily.html
@@ -7,4 +7,4 @@ title: Daily Routine
 
 <rssapp-wall id="hTxxeMWBJG86K29F"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
-<rssapp-wall id="UvW69TSJxWhgav4w"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-wall id="hJY03PCSC0CDhiuh"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
