--- a/daily.html
+++ b/daily.html
@@ -3,7 +3,7 @@ layout: page
 title: Daily Routine
 ---
 
-<rssapp-wall id="V57M2Z6smju6Ti69"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-list id="V57M2Z6smju6Ti69"></rssapp-list><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script>
 
 <rssapp-wall id="hTxxeMWBJG86K29F"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
