--- a/daily.html
+++ b/daily.html
@@ -5,6 +5,6 @@ title: Daily Routine
 
 <rssapp-list id="V57M2Z6smju6Ti69"></rssapp-list><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script>
 
-<rssapp-wall id="hTxxeMWBJG86K29F"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-wall id="hTxxeMWBJG86K29F"></rssapp-wall><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script>
 
-<rssapp-wall id="hJY03PCSC0CDhiuh"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-wall id="hJY03PCSC0CDhiuh"></rssapp-wall><script src="https://widget.rss.app/v1/list.js" type="text/javascript" async></script>
