--- a/pulse.html
+++ b/pulse.html
@@ -3,5 +3,12 @@ layout: page
 title: Market Pluse
 ---
 
-{% assign image_files = site.static_files | where: "market_pulse", true | sort | reverse %}
+{% assign image_files = site.static_files | where: "market_pulse", true | sort: "basename" | reverse %}
+{% for file in image_files %}
+    {% assign filenameparts = file.path | split: "/" %}
+    {% assign filename = filenameparts | last | replace: file.extname,"" %}
+    <li>
+        <a href="{{ file.path | relative_url }}" title="{{ filename }}"><img src="//images.weserv.nl/?url={{ site.url | replace: 'http://','' | replace: 'https://','' }}{{ file.path | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ filename }}" title="{{ filename }}" /><span>{{ filename }}</span></a>
+    </li>
+{% endfor %}
 {% include image-gallery.html images=image_files %}
