--- a/pulse.html
+++ b/pulse.html
@@ -3,5 +3,24 @@ layout: page
 title: Market Pluse
 ---
 
+<style>
+    .image-gallery {overflow: auto; display: flex; margin-left: -1%!important; flex-wrap: wrap; flex-direction: row; align-items: flex-start;}
+    .image-gallery li {float: left; display: block; margin: 0 0 1% 1%; width: 32%;}
+    .image-gallery li a {text-align: center; text-decoration: none!important; color: #777;}
+    .image-gallery li a span {display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 3px 0;}
+    .image-gallery li a img {width: 100%; display: block;}
+</style>
+
 {% assign image_files = site.static_files | where: "market_pulse", true | sort: "basename" | reverse %}
 {% include image-gallery.html images=image_files %}
+
+<ul class="image-gallery">
+    {% for file in image_files %}
+        {% assign filename = file.path | split: "/" | last | replace: file.extname, "" %}
+        {% assign url = file.path | relative_url %}
+        {% assign article_url = "/columns/The_Big_Picture/" | append: filename %}
+        <li>
+            <span>{{ filename }}</span><a href="{{ article_url }}" title="{{ filename }}"><img src="{{ url }}" alt="{{ filename }}" title="{{ filename }}" /></a>
+        </li>
+    {% endfor %}
+</ul>
